--- a/kubejs/assets/dungeons_arise/lang/zh_cn.json
+++ b/kubejs/assets/dungeons_arise/lang/zh_cn.json
@@ -107,6 +107,8 @@
   "advancement.dungeons_arise.find_mechanical_nest.desc": "找到一座机械巢穴",
   "advancement.dungeons_arise.find_kisegi_sanctuary.title": "《恶魔的怜悯》",
   "advancement.dungeons_arise.find_kisegi_sanctuary.desc": "找到木濑圣所",
+  "advancement.dungeons_arise.find_mining_complex.title": "《供养机器》",
+  "advancement.dungeons_arise.find_mining_complex.desc": "找到矿业综合体",
 
   "enchantment.dungeons_arise.purification": "净化",
   "enchantment.dungeons_arise.purification.desc": "赋予抵消所有中毒与凋零效果的几率，释放能量冲击波对周围敌人造成伤害。",
