--- a/kubejs/assets/explorerscompass/lang/zh_cn.json
+++ b/kubejs/assets/explorerscompass/lang/zh_cn.json
@@ -463,6 +463,7 @@
 	"structure.dungeons_arise.lighthouse": "【地牢浮现之时】灯塔",
 	"structure.dungeons_arise.mechanical_nest": "【地牢浮现之时】机械巢穴",
 	"structure.dungeons_arise.merchant_campsite": "【地牢浮现之时】旅商营地",
+	"structure.dungeons_arise.mining_complex": "【地牢浮现之时】矿业综合体",
 	"structure.dungeons_arise.mining_system": "【地牢浮现之时】大型矿井",
 	"structure.dungeons_arise.monastery": "【地牢浮现之时】修道院",
 	"structure.dungeons_arise.mushroom_house": "【地牢浮现之时】蘑菇小屋",
