--- a/kubejs/assets/torchmaster/lang/zh_cn.json
+++ b/kubejs/assets/torchmaster/lang/zh_cn.json
@@ -1,33 +1,37 @@
 {
-    "block.torchmaster.megatorch": "巨型火把",
-    "block.torchmaster.megatorch.tooltip": "防止在火把周围大半径范围内刷新敌对怪物",
-    "block.torchmaster.dreadlamp": "恐惧之灯",
-    "block.torchmaster.dreadlamp.tooltip": "防止动物如鱿鱼、蝙蝠或豹猫在灯周围刷新",
-    "block.torchmaster.feral_flare_lantern": "野火灯笼",
-    "block.torchmaster.feral_flare_lantern.tooltip": "放置隐形灯光",
-    "block.torchmaster.invisible_light": "不可见光源",
-    "command.torchmaster.torch_list.completed": "火把已经存储至日志文件中",
-    "command.torchmaster.entity_dump.completed": "实体已经储存至日志文件中",
-    "itemGroup.torchmaster": "火炬大师",
+  "block.torchmaster.megatorch": "巨型火把",
+  "block.torchmaster.megatorch.tooltip": "在火把周围大范围内阻止敌对生物自然生成",
+  "block.torchmaster.dreadlamp": "恐惧之灯",
+  "block.torchmaster.dreadlamp.tooltip": "在灯周围大范围内阻止友好生物（例如鱿鱼、蝙蝠或豹猫等）自然生成",
+  "block.torchmaster.feral_flare_lantern": "狂野闪耀之灯",
+  "block.torchmaster.feral_flare_lantern.tooltip": "放置隐形光源",
+  "block.torchmaster.invisible_light": "隐形光源",
+  "command.torchmaster.torch_list.completed": "火把已导出至日志文件",
+  "command.torchmaster.entity_dump.completed": "实体已导出至日志文件",
+  "itemGroup.torchmaster": "火把大师",
 
-    "text.config.torchmaster-config.option.feralFlareLanternTickRate": "野火灯笼更新频率",
-    "text.config.torchmaster-config.option.feralFlareLanternTickRate.tooltip": "灯笼尝试放置光源的频率间隔",
-    "text.config.torchmaster-config.option.feralFlareLanternLightHardcap": "野火灯笼光源硬性上限",
-    "text.config.torchmaster-config.option.feralFlareLanternLightHardcap.tooltip": "野火灯笼允许放置的光源总数上限。设置过高可能导致世界损坏。",
-    "text.config.torchmaster-config.option.feralFlareLanternRadius": "野火灯笼作用半径",
-    "text.config.torchmaster-config.option.feralFlareLanternRadius.tooltip": "灯笼放置光源的圆形区域半径",
-    "text.config.torchmaster-config.option.feralFlareLanternMinLightLevel": "野火灯笼最小光照等级",
-    "text.config.torchmaster-config.option.feralFlareLanternMinLightLevel.tooltip": "触发光源放置的最低光照等级阈值",
-    "text.config.torchmaster-config.option.dreadLampRadius": "恐惧之灯作用半径",
-    "text.config.torchmaster-config.option.dreadLampRadius.tooltip": "恐惧之灯的生效范围半径",
-    "text.config.torchmaster-config.option.megaTorchRadius": "巨型火把作用半径",
-    "text.config.torchmaster-config.option.megaTorchRadius.tooltip": "巨型火把的生效范围半径",
-    "text.config.torchmaster-config.option.blockOnlyNaturalSpawns": "仅阻止自然生成",
-    "text.config.torchmaster-config.option.blockOnlyNaturalSpawns.tooltip": "禁用时，巨型火把和恐惧之灯将阻止刷怪笼生成生物",
-    "text.config.torchmaster-config.option.blockVillageSieges": "阻止村庄围攻",
-    "text.config.torchmaster-config.option.blockVillageSieges.tooltip": "启用时巨型火把将阻止僵尸围攻村庄",
-    "text.config.torchmaster-config.option.megaTorchEntityBlockListOverrides": "巨型火把实体阻止列表覆盖",
-    "text.config.torchmaster-config.option.megaTorchEntityBlockListOverrides.tooltip": "详见GitHub上的火炬大师Wiki文档",
-    "text.config.torchmaster-config.option.dreadLampEntityBlockListOverrides": "恐惧之灯实体阻止列表覆盖",
-    "text.config.torchmaster-config.option.dreadLampEntityBlockListOverrides.tooltip": "详见GitHub上的火炬大师Wiki文档"
+  "item.torchmaster.frozen_pearl": "寒冻珍珠",
+  "item.torchmaster.frozen_pearl.tooltip": "清除狂野闪耀之灯的残余光源",
+
+  "text.config.torchmaster-config.option.feralFlareLanternTickRate": "狂野闪耀之灯工作间隔（tick）",
+  "text.config.torchmaster-config.option.feralFlareLanternTickRate.tooltip": "狂野闪耀之灯尝试放置光源的频率",
+  "text.config.torchmaster-config.option.feralFlareLanternLightHardcap": "狂野闪耀之灯光源数硬性上限",
+  "text.config.torchmaster-config.option.feralFlareLanternLightHardcap.tooltip": "狂野闪耀之灯总共可放置多少光源。数值设置得过高可能会导致存档损坏。",
+  "text.config.torchmaster-config.option.feralFlareLanternRadius": "狂野闪耀之灯范围半径",
+  "text.config.torchmaster-config.option.feralFlareLanternRadius.tooltip": "狂野闪耀之灯放置光源的圆形半径",
+  "text.config.torchmaster-config.option.feralFlareLanternMinLightLevel": "狂野闪耀之灯最低光照等级",
+  "text.config.torchmaster-config.option.feralFlareLanternMinLightLevel.tooltip": "狂野闪耀之灯尝试放置光源前的最低光照等级",
+  "text.config.torchmaster-config.option.dreadLampRadius": "恐惧之灯范围半径",
+  "text.config.torchmaster-config.option.dreadLampRadius.tooltip": "恐惧之灯范围半径",
+  "text.config.torchmaster-config.option.megaTorchRadius": "巨型火把范围半径",
+  "text.config.torchmaster-config.option.megaTorchRadius.tooltip": "巨型火把范围半径",
+  "text.config.torchmaster-config.option.blockOnlyNaturalSpawns": "仅阻止自然生成",
+  "text.config.torchmaster-config.option.blockOnlyNaturalSpawns.tooltip": "若禁用，巨型火把和恐惧之灯将阻止原版刷怪笼生成生物。",
+  "text.config.torchmaster-config.option.blockVillageSieges": "阻止僵尸围城",
+  "text.config.torchmaster-config.option.blockVillageSieges.tooltip": "若启用，巨型火把会阻止僵尸围城事件",
+  "text.config.torchmaster-config.option.megaTorchEntityBlockListOverrides": "巨型火把阻挡名单覆写",
+  "text.config.torchmaster-config.option.megaTorchEntityBlockListOverrides.tooltip": "查看Github上的模组Wiki以了解更多细节",
+  "text.config.torchmaster-config.option.dreadLampEntityBlockListOverrides": "恐惧之灯阻挡名单覆写",
+  "text.config.torchmaster-config.option.dreadLampEntityBlockListOverrides.tooltip": "查看Github上的模组Wiki以了解更多细节"
 }
+
