--- a/kubejs/assets/ftbteams/lang/zh_cn.json
+++ b/kubejs/assets/ftbteams/lang/zh_cn.json
@@ -7,7 +7,8 @@
   "ftbteams.not_member": "%s不是「%s」的成员！",
   "ftbteams.not_officer": "%s不是「%s」的管理者！",
   "ftbteams.not_invited": "你未被邀请加入%s！",
-  "ftbteams.name_too_short": "队伍名称太短！（必须>=3字符）",
+  "ftbteams.name_too_short": "团队名称太短！（必须>=3字符）",
+	"ftbteams.team_already_exists": "团队 %s 已经存在！",
   "ftbteams.server_permissions_prevent": "服务器权限阻止了你那么做",
   "ftbteams.info.id": "长队伍ID：%s",
   "ftbteams.info.short_id": "短队伍ID：%s",
