--- a/kubejs/assets/explorerscompass/lang/zh_cn.json
+++ b/kubejs/assets/explorerscompass/lang/zh_cn.json
@@ -209,137 +209,135 @@
     "structure.mss.volcano": "火山空岛",
     "structure.mss.white_house": "白宫空岛",
 	
+	"structure.mvs.acacia_log_pile": "金合欢木堆",
+	"structure.mvs.acacia_tree": "金合欢树",
+	"structure.mvs.acacia_well": "金合欢井",
+	"structure.mvs.azelea_house": "杜鹃花屋",
+	"structure.mvs.barn": "谷仓",
   	"structure.mvs.beach_bar": "海滩酒吧",
+	"structure.mvs.bee_dome": "养蜂房",
+	"structure.mvs.bench": "长椅",
+	"structure.mvs.big_oak_tree": "大橡树",
+	"structure.mvs.birch_log_pile": "白桦木堆",
+	"structure.mvs.birch_tree": "白桦树",
+  	"structure.mvs.birch_well": "桦木井",
+	"structure.mvs.blue_stall": "蓝色小棚",
+	"structure.mvs.boulder": "巨石",
+	"structure.mvs.campsite": "露营地",
+	"structure.mvs.cart": "手推车",
   	"structure.mvs.cartographer_tower": "制图师之塔",
-  	"structure.mvs.carts.cart": "手推车",
-    "structure.mvs.carts.large_cart_1": "大手推车1",
-    "structure.mvs.carts.large_cart_2": "大手推车2",
-  	"structure.mvs.carts.medium_bamboo_cart": "竹手推车",
-  	"structure.mvs.cathedral": "大教堂",
-  	"structure.mvs.crystal": "水晶",
-  	"structure.mvs.dead_tree.acacia": "枯死的金合欢树",
-  	"structure.mvs.dead_tree.birch": "枯死的白桦树",
-  	"structure.mvs.dead_tree.cherry": "枯死的樱花树",
-  	"structure.mvs.dead_tree.dark_oak": "枯死的深色橡树",
-  	"structure.mvs.dead_tree.jungle": "枯死的丛林树",
-  	"structure.mvs.dead_tree.mangrove": "枯死的红树",
-  	"structure.mvs.dead_tree.oak": "枯死的橡树",
-  	"structure.mvs.dead_tree.spruce": "枯死的云杉树",
+	"structure.mvs.castle_ruins": "城堡废墟",
+	"structure.mvs.cathedral": "大教堂",
+	"structure.mvs.cherry_tree": "樱花树",
+	"structure.mvs.crimson_enchanting_table": "绯红附魔台",
+	"structure.mvs.crystal": "水晶",
+	"structure.mvs.dark_oak_log_pile": "深色橡木堆",
+	"structure.mvs.dark_oak_tree": "深色橡树",
+  	"structure.mvs.dark_oak_well": "深色橡木井",
+  	"structure.mvs.dead_tree_acacia": "枯死的金合欢树",
+  	"structure.mvs.dead_tree_birch": "枯死的白桦树",
+  	"structure.mvs.dead_tree_cherry": "枯死的樱花树",
+  	"structure.mvs.dead_tree_dark_oak": "枯死的深色橡树",
+  	"structure.mvs.dead_tree_jungle": "枯死的丛林树",
+  	"structure.mvs.dead_tree_mangrove": "枯死的红树",
+  	"structure.mvs.dead_tree_oak": "枯死的橡树",
+  	"structure.mvs.dead_tree_spruce": "枯死的云杉树",
+  	"structure.mvs.deepslate_house": "深板岩小屋",
+  	"structure.mvs.desert_house": "沙漠小屋",
+  	"structure.mvs.desert_pump": "沙漠水泵",
+  	"structure.mvs.desert_well": "沙漠井",
+  	"structure.mvs.duck": "鸭子",
+  	"structure.mvs.end_scraps_1": "末地残渣1",
+  	"structure.mvs.end_scraps_2": "末地残渣2",
+  	"structure.mvs.end_scraps_3": "末地残渣3",
+  	"structure.mvs.end_scraps_4": "末地残渣4",
+  	"structure.mvs.end_well": "末地井",
+  	"structure.mvs.fire_camp": "篝火营地",
+  	"structure.mvs.floating_islands": "空岛",
+  	"structure.mvs.flower_hole": "花洞",
+  	"structure.mvs.fox_hut": "狐狸小屋",
   	"structure.mvs.gallows": "绞刑架",
+  	"structure.mvs.haystack": "干草堆",
+  	"structure.mvs.horse_campsite": "马匹露营地",
   	"structure.mvs.horse_pen": "马圈",
-  	"structure.mvs.houses.azelea_house": "杜鹃花屋",
-  	"structure.mvs.houses.barn": "谷仓",
-  	"structure.mvs.houses.deepslate_house": "深板屋",
-  	"structure.mvs.houses.desert_house": "沙漠小屋",
-  	"structure.mvs.houses.flower_hole": "花洞",
-  	"structure.mvs.houses.house": "小屋",
-  	"structure.mvs.houses.large_floating_island": "大浮岛",
-  	"structure.mvs.houses.large_warped_tower": "大型诡异塔",
-  	"structure.mvs.houses.medium_igloo_1": "冰屋1",
-  	"structure.mvs.houses.medium_igloo_2": "冰屋2",
-	"structure.mvs.houses.red_tower": "红塔",
-  	"structure.mvs.houses.small_igloo": "小冰屋",
-  	"structure.mvs.houses.small_swamp_house": "小沼泽屋",
-  	"structure.mvs.houses.tall_house": "高屋",
-  	"structure.mvs.houses.warped_house": "诡异木屋",
-  	"structure.mvs.lantern.medium_oak_lantern": "橡木路灯",
-  	"structure.mvs.lantern.small_acacia_lantern": "金合欢路灯",
-  	"structure.mvs.lantern.small_bamboo_lantern": "竹路灯",
-  	"structure.mvs.lantern.small_birch_lantern": "桦木路灯",
-  	"structure.mvs.lantern.small_campfire_lantern": "营火路灯",
-  	"structure.mvs.lantern.small_cherry_lantern": "樱木路灯",
-  	"structure.mvs.lantern.small_dark_oak_lantern": "深橡木路灯",
-  	"structure.mvs.lantern.small_jungle_lantern": "丛林路灯",
-  	"structure.mvs.lantern.small_mangrove_lantern": "红树林路灯",
-  	"structure.mvs.lantern.small_oak_lantern": "小橡木路灯",
-  	"structure.mvs.lantern.small_spruce_lantern": "云杉路灯",
-  	"structure.mvs.log_pile.acacia_log_pile": "金合欢木堆",
-  	"structure.mvs.log_pile.birch_log_pile": "白桦木堆",
-  	"structure.mvs.log_pile.dark_oak_log_pile": "深橡木堆",
-  	"structure.mvs.log_pile.jungle_log_pile": "丛林木堆",
-  	"structure.mvs.log_pile.oak_log_pile": "橡木堆",
-  	"structure.mvs.log_pile.spruce_log_pile": "云杉木堆",
-	"structure.mvs.mineshaft": "矿井",
-  	"structure.mvs.nature.acacia_tree": "金合欢树",
-  	"structure.mvs.nature.big_oak_tree": "大橡树",
-  	"structure.mvs.nature.birch_tree": "白桦树",
-  	"structure.mvs.nature.boulder": "巨石",
-  	"structure.mvs.nature.cherry_tree": "樱花树",
-  	"structure.mvs.nature.dark_oak_tree": "深橡树",
-  	"structure.mvs.nature.floating_islands": "空岛",
-  	"structure.mvs.nature.jungle_palm_tree": "丛林棕榈树",
-  	"structure.mvs.nature.jungle_tree": "丛林树",
-  	"structure.mvs.nature.large_mushroom": "大型蘑菇",
-  	"structure.mvs.nature.mushroom_pond": "蘑菇池",
-  	"structure.mvs.nature.oak_tree": "橡树",
-  	"structure.mvs.nature.paths": "小径",
-  	"structure.mvs.nature.small_oak_pond": "小橡木池",
-  	"structure.mvs.nature.spruce_tree": "云杉树",
-  	"structure.mvs.nature.stone_rock": "石岩",
-  	"structure.mvs.ocean_tower": "海塔",
-  	"structure.mvs.other_decoration.bee_dome": "养蜂房",
-  	"structure.mvs.other_decoration.bench": "长椅",
-  	"structure.mvs.other_decoration.campsite": "露营地",
-  	"structure.mvs.other_decoration.crimson_enchanting_table": "绯红附魔台",
-  	"structure.mvs.other_decoration.desert_pump": "沙漠水泵",
-  	"structure.mvs.other_decoration.duck": "鸭子",
-  	"structure.mvs.other_decoration.fire_camp": "篝火营地",
-  	"structure.mvs.other_decoration.fox_hut": "狐狸小屋",
-  	"structure.mvs.other_decoration.haystack": "干草堆",
-  	"structure.mvs.other_decoration.horse_campsite": "马匹露营地",
-  	"structure.mvs.other_decoration.lamp_chest": "灯箱",
-  	"structure.mvs.other_decoration.lecturn_garden": "讲台花园",
-  	"structure.mvs.other_decoration.mine_with_campsite": "带露营地的矿井",
-  	"structure.mvs.other_decoration.mushroom_statue": "蘑菇雕像",
-  	"structure.mvs.other_decoration.nether_devil": "下界恶魔",
-  	"structure.mvs.other_decoration.pile": "堆",
-  	"structure.mvs.other_decoration.snowy_dog_hut": "雪地狗屋",
-  	"structure.mvs.other_decoration.snowy_fossil": "雪地化石",
-  	"structure.mvs.other_decoration.stone_bee": "石蜂",
-  	"structure.mvs.other_decoration.villager_statue": "村民雕像",
-  	"structure.mvs.other_decoration.wheat_grain_bin": "小麦粮仓",
-  	"structure.mvs.other_decoration.wooden_wheat_farm": "小麦农场",
-  	"structure.mvs.other_decoration.windmill": "风车",
-  	"structure.mvs.other_decoration.end_scraps.end_scraps_1": "末地残渣1",
-  	"structure.mvs.other_decoration.end_scraps.end_scraps_2": "末地残渣2",
-  	"structure.mvs.other_decoration.end_scraps.end_scraps_3": "末地残渣3",
-  	"structure.mvs.other_decoration.end_scraps.end_scraps_4": "末地残渣4",
-  	"structure.mvs.ruins.castle_ruins": "城堡废墟",
-  	"structure.mvs.ruins.log_ruin": "原木废墟",
-  	"structure.mvs.ruins.ruined_beacon": "破损信标",
-  	"structure.mvs.ruins.small_ruin": "小型废墟",
-  	"structure.mvs.ruins.statue_ruins": "雕像废墟",
-  	"structure.mvs.ruins.stone_pillars": "石柱",
-  	"structure.mvs.ruins.tree_monument": "树纪念碑",
-  	"structure.mvs.stall.blue_stall": "蓝色小棚",
-  	"structure.mvs.stall.orange_stall": "橙色小棚",
-  	"structure.mvs.stall.pink_stall": "粉色小棚",
-  	"structure.mvs.stall.red_stall": "红色小棚",
-  	"structure.mvs.well.rare_well": "稀有井",
-  	"structure.mvs.well.small_copper_well": "小型铜井",
-  	"structure.mvs.well.small_tower_well": "小型塔井",
-  	"structure.mvs.well.small_well": "小井",
-  	"structure.mvs.well.well": "井",
-  	"structure.mvs.well.wells.acacia_well": "金合欢井",
-  	"structure.mvs.well.wells.birch_well": "桦木井",
-  	"structure.mvs.well.wells.dark_oak_well": "深色橡木井",
-  	"structure.mvs.well.wells.desert_well": "沙漠井",
-  	"structure.mvs.well.wells.end_well": "末地井",
-  	"structure.mvs.well.wells.jungle_well": "丛林井",
-  	"structure.mvs.well.wells.mushroom_well": "蘑菇井",
-  	"structure.mvs.well.wells.nether_well": "下界井",
-  	"structure.mvs.well.wells.oak_well": "橡木井",
-  	"structure.mvs.well.wells.rocky_well": "岩石井",
-  	"structure.mvs.well.wells.snowy_well": "雪地井",
-  	"structure.mvs.well.wells.spruce_well": "云杉井",
+  	"structure.mvs.house": "小屋",
+  	"structure.mvs.jungle_log_pile": "丛林木堆",
+  	"structure.mvs.jungle_palm_tree": "丛林棕榈树",
   	"structure.mvs.jungle_tower": "丛林塔",
+  	"structure.mvs.jungle_tree": "丛林树",
+  	"structure.mvs.jungle_well": "丛林井",
+  	"structure.mvs.lamp_chest": "灯箱",
+    "structure.mvs.large_cart_1": "大手推车1",
+    "structure.mvs.large_cart_2": "大手推车2",
+  	"structure.mvs.large_floating_island": "空岛",
+  	"structure.mvs.large_mushroom": "大型蘑菇",
+  	"structure.mvs.large_warped_tower": "大型诡异塔",
+  	"structure.mvs.lecturn_garden": "讲台花园",
+  	"structure.mvs.log_ruin": "原木废墟",
+  	"structure.mvs.medium_bamboo_cart": "竹手推车",
+  	"structure.mvs.medium_igloo_1": "冰屋1",
+  	"structure.mvs.medium_oak_lantern": "橡木路灯",
+  	"structure.mvs.mine_with_campsite": "带露营地的矿井",
+	"structure.mvs.mineshaft": "矿井",
+  	"structure.mvs.mushroom_pond": "蘑菇池",
+  	"structure.mvs.mushroom_statue": "蘑菇雕像",
+  	"structure.mvs.mushroom_well": "蘑菇井",
+  	"structure.mvs.nether_devil": "下界恶魔",
+  	"structure.mvs.nether_well": "下界井",
+  	"structure.mvs.oak_log_pile": "橡木堆",
+  	"structure.mvs.oak_tree": "橡树",
+  	"structure.mvs.oak_well": "橡木井",
+  	"structure.mvs.ocean_tower": "海塔",
+  	"structure.mvs.orange_stall": "橙色小棚",
   	"structure.mvs.out_house": "外屋",
+  	"structure.mvs.paths": "小径",
+  	"structure.mvs.pile": "堆",
+  	"structure.mvs.pink_stall": "粉色小棚",
   	"structure.mvs.railway": "铁路",
+  	"structure.mvs.rare_well": "稀有井",
+  	"structure.mvs.red_stall": "红色小棚",
+	"structure.mvs.red_tower": "红塔",
+  	"structure.mvs.rocky_well": "岩石井",
+  	"structure.mvs.ruined_beacon": "破损信标",
   	"structure.mvs.shed": "棚屋",
+  	"structure.mvs.small_acacia_lantern": "金合欢路灯",
+  	"structure.mvs.small_bamboo_lantern": "竹路灯",
+  	"structure.mvs.small_birch_lantern": "桦木路灯",
+  	"structure.mvs.small_campfire_lantern": "营火路灯",
+  	"structure.mvs.small_cherry_lantern": "樱木路灯",
+  	"structure.mvs.small_copper_well": "小型铜井",
+  	"structure.mvs.small_dark_oak_lantern": "深橡木路灯",
+  	"structure.mvs.small_igloo": "小冰屋",
+  	"structure.mvs.small_jungle_lantern": "丛林路灯",
+  	"structure.mvs.small_mangrove_lantern": "红树林路灯",
+  	"structure.mvs.small_oak_lantern": "小橡木路灯",
+  	"structure.mvs.small_oak_pond": "小橡木池",
   	"structure.mvs.small_pillager_tower": "小型掠夺者塔",
+  	"structure.mvs.small_ruin": "小型废墟",
   	"structure.mvs.small_ship": "小船",
+  	"structure.mvs.small_spruce_lantern": "云杉路灯",
+  	"structure.mvs.small_swamp_house": "小沼泽屋",
+  	"structure.mvs.small_tower_well": "小型塔井",
+  	"structure.mvs.small_well": "小井",
+  	"structure.mvs.snowy_dog_hut": "雪地狗屋",
+  	"structure.mvs.snowy_fossil": "雪地化石",
+  	"structure.mvs.snowy_well": "雪地井",
+  	"structure.mvs.spruce_log_pile": "云杉木堆",
+  	"structure.mvs.spruce_tree": "云杉树",
+  	"structure.mvs.spruce_well": "云杉井",
+  	"structure.mvs.statue_ruins": "雕像废墟",
   	"structure.mvs.stone_fountain": "石制喷泉",
+  	"structure.mvs.stone_pillars": "石柱",
+  	"structure.mvs.stone_rock": "石岩",
   	"structure.mvs.sunzi_gate": "孙子门",
+  	"structure.mvs.tall_house": "高屋",
+  	"structure.mvs.tree_monument": "树纪念碑",
+  	"structure.mvs.villager_statue": "村民雕像",
+  	"structure.mvs.warped_house": "诡异木屋",
+  	"structure.mvs.well": "井",
+  	"structure.mvs.wheat_grain_bin": "小麦粮仓",
+  	"structure.mvs.windmill": "风车",
+  	"structure.mvs.wooden_wheat_farm": "小麦农场",
 
 	"structure.skyvillages.skyvillage": "天空村庄",
 
