更新苔原龙相关技能

--- a/kubejs/assets/tundradragon/lang/zh_cn.json
+++ b/kubejs/assets/tundradragon/lang/zh_cn.json
@@ -1,23 +1,23 @@
 {
-  "item.tundradragon.freezerburned_steak": "冻伤牛排",
+  "item.tundradragon.freezerburned_steak": "冰焦牛排",
   "item.tundradragon.tundra_dragon_treat": "苔原龙零食",
   "item.tundradragon.tundra_dragon_treat.description_0": "§7■ 临时获得无限法力值。",
   "effect.tundradragon.supercooling": "过冷",
   "item.tundradragon.infused_ice_crystal": "灌注冰晶",
   "item.tundradragon.chilled_porkchop": "冰鲜猪排",
-  "item.tundradragon.freezerburned_mutton": "冻伤羊肉",
+  "item.tundradragon.freezerburned_mutton": "冰焦羊肉",
   "item.tundradragon.chilled_chicken": "冰鲜鸡肉",
   "item.tundradragon.chilled_mutton": "冰鲜羊肉",
   "effect.tundradragon.frostbite": "霜冻",
   "item.tundradragon.popsicle": "蓝冰冰棒",
   "item.tundradragon.popsicle.description_0": "§7■ 移除凋零与中毒效果，并提供吸收与生命恢复。由致密蓝冰灌注龙骨制成，并借助烈焰粉的巧妙应用使其软化可食。",
   "effect.tundradragon.freeze_immunity": "冻结免疫",
-  "item.tundradragon.freezerburned_chicken": "冻伤鸡肉",
+  "item.tundradragon.freezerburned_chicken": "冰焦鸡肉",
   "item.tundradragon.chilled_rabbit": "冰鲜兔肉",
-  "item.tundradragon.freezerburned_rabbit": "冻伤兔肉",
+  "item.tundradragon.freezerburned_rabbit": "冰焦兔肉",
   "item.tundradragon.chilled_steak": "冰鲜牛排",
   "item.tundradragon.snowy_stew.description_0": "§7■ 提供生命恢复效果。由肉类与细雪在可食用的冰碗中随意混合而成。",
-  "item.tundradragon.freezerburned_porkchop": "冻伤猪排",
+  "item.tundradragon.freezerburned_porkchop": "冰焦猪排",
   "item.tundradragon.snowy_stew": "雪炖菜",
   "item.tundradragon.infused_ice_crystal.description_0": "§7■ 使你打个寒颤，然后强化你的冰晶骨头，让你在一段时间内能抵御高温与冲击。"
 }
