注册专属龙心

--- a/kubejs/assets/kubejs/lang/en_us.json
+++ b/kubejs/assets/kubejs/lang/en_us.json
@@ -34,6 +34,19 @@
   "item.kubejs.tundra_icon": "Tundra Icon",
   "item.kubejs.tundra_full_icon": "Tundra Full Icon",
 
+  "item.kubejs.cave_dragon_heart": "Cave Dragon Heart",
+  "item.kubejs.cave_dragon_heart.tooltip": "Remnant of the Cave Dragon Progenitor, containing the essence of fire",
+  "item.kubejs.forest_dragon_heart": "Forest Dragon Heart",
+  "item.kubejs.forest_dragon_heart.tooltip": "Remnant of the Forest Dragon Progenitor, containing the essence of wood",
+  "item.kubejs.sea_dragon_heart": "Sea Dragon Heart",
+  "item.kubejs.sea_dragon_heart.tooltip": "Remnant of the Sea Dragon Progenitor, containing the essence of water",
+  "item.kubejs.tundra_dragon_heart": "Tundra Dragon Heart",
+  "item.kubejs.tundra_dragon_heart.tooltip": "Remnant of the Tundra Dragon Progenitor, containing the essence of ice",
+  "item.kubejs.aether_dragon_heart": "Aether Dragon Heart",
+  "item.kubejs.aether_dragon_heart.tooltip": "Remnant of the Aether Dragon Progenitor, containing the essence of wind",
+  "item.kubejs.astral_dragon_heart": "Astral Dragon Heart",
+  "item.kubejs.astral_dragon_heart.tooltip": "Remnant of the Astral Dragon Progenitor, containing the essence of stars",
+
   "item.kubejs.slime_crown": "Slime Crown",
   "item.kubejs.slime_crown.tooltip": "Can only be used in the Undergarden",
   "item.kubejs.suspicious_looking_eye": "Suspicious Looking Eye",
