--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -34,6 +34,19 @@
   "item.kubejs.tundra_icon": "苔原龙图标",
   "item.kubejs.tundra_full_icon": "苔原龙完整图标",
 
+  "item.kubejs.cave_dragon_heart": "洞穴龙心",
+  "item.kubejs.cave_dragon_heart.tooltip": "洞穴龙始祖的残存，蕴含着火之本源",
+  "item.kubejs.forest_dragon_heart": "森林龙心",
+  "item.kubejs.forest_dragon_heart.tooltip": "森林龙始祖的残存，蕴含着木之本源",
+  "item.kubejs.sea_dragon_heart": "海洋龙心",
+  "item.kubejs.sea_dragon_heart.tooltip": "海洋龙始祖的残存，蕴含着水之本源",
+  "item.kubejs.tundra_dragon_heart": "苔原龙心",
+  "item.kubejs.tundra_dragon_heart.tooltip": "苔原龙始祖的残存，蕴含着冰之本源",
+  "item.kubejs.aether_dragon_heart": "以太龙心",
+  "item.kubejs.aether_dragon_heart.tooltip": "以太龙始祖的残存，蕴含着风之本源",
+  "item.kubejs.astral_dragon_heart": "星界龙心",
+  "item.kubejs.astral_dragon_heart.tooltip": "星界龙始祖的残存，蕴含着星之本源",
+
   "item.kubejs.slime_crown": "史莱姆皇冠",
   "item.kubejs.slime_crown.tooltip": "只能在深暗之园的特定结构处召唤史莱姆王",
   "item.kubejs.suspicious_looking_eye": "可疑眼球",
