以太龙成长阶段重做

--- a/kubejs/assets/kubejs/lang/en_us.json
+++ b/kubejs/assets/kubejs/lang/en_us.json
@@ -9,6 +9,8 @@
 	"dragon_ability.dragonsurvival.wind_breath.desc": "■ The Aether Dragon exhales a gentle breeze, as if breathing clouds and mist.\n\n■ The wind can §2clear weeds§7 and also §2grant speed§7 to allies.§r\n\n■ Its §2damage is low§7, but it §2does not consume mana§7.§r",
 	"dragon_stage.dragonsurvival.aether_ancient_human": "Human",
   "dragon_stage.dragonsurvival.aether_ancient": "Ancient",
+  "dragon_stage.dragonsurvival.aether_archean": "Archean",
+  "dragon_stage.dragonsurvival.aether_progenitor": "Progenitor",
   "dragon_species.dragonsurvival.aether_dragon.banner.desc": "§7■ The §6Aether Dragon§r§7 is a §fswift§r§7, §fagile§r§7, and graceful creature, its body cutting through §fseas of clouds and waves§r§7.\n\n§2■ Traits:§f§r§7 High mobility, weather and airflow magic, underwater breathing boost, fall immunity.\n§4■ Weakness:§r§7 Deep underground.\n§6■ Diet:§f§r§7 Animal products.§r",
 	"dragon_species.dragonsurvival.aether_dragon_human": "Qing Dragon",
 	"dragon_species.dragonsurvival.aether_dragon_human.banner.desc": "§7■ The §6Qing Dragon§r§7 is the human form after the Aether Dragon transforms.§r§7\n\n§2■ Traits:§f§r§7 High mobility, weather and airflow magic, underwater breathing boost, fall immunity.\n§4■ Weakness:§r§7 Deep underground.\n§6■ Diet:§f§r§7 Animal products.§r",
@@ -35,17 +37,17 @@
   "item.kubejs.tundra_full_icon": "Tundra Full Icon",
 
   "item.kubejs.cave_dragon_heart": "Cave Dragon Heart",
-  "item.kubejs.cave_dragon_heart.tooltip": "Remnant of the Cave Dragon Progenitor, containing the essence of fire",
+  "item.kubejs.cave_dragon_heart.tooltip": "§6■ Remnant of the Cave Dragon Progenitor, containing the essence of fire.",
   "item.kubejs.forest_dragon_heart": "Forest Dragon Heart",
-  "item.kubejs.forest_dragon_heart.tooltip": "Remnant of the Forest Dragon Progenitor, containing the essence of wood",
+  "item.kubejs.forest_dragon_heart.tooltip": "§6■ Remnant of the Forest Dragon Progenitor, containing the essence of wood.",
   "item.kubejs.sea_dragon_heart": "Sea Dragon Heart",
-  "item.kubejs.sea_dragon_heart.tooltip": "Remnant of the Sea Dragon Progenitor, containing the essence of water",
+  "item.kubejs.sea_dragon_heart.tooltip": "§6■ Remnant of the Sea Dragon Progenitor, containing the essence of water.",
   "item.kubejs.tundra_dragon_heart": "Tundra Dragon Heart",
-  "item.kubejs.tundra_dragon_heart.tooltip": "Remnant of the Tundra Dragon Progenitor, containing the essence of ice",
+  "item.kubejs.tundra_dragon_heart.tooltip": "§6■ Remnant of the Tundra Dragon Progenitor, containing the essence of ice.",
   "item.kubejs.aether_dragon_heart": "Aether Dragon Heart",
-  "item.kubejs.aether_dragon_heart.tooltip": "Remnant of the Aether Dragon Progenitor, containing the essence of wind",
+  "item.kubejs.aether_dragon_heart.tooltip": "§6■ Remnant of the Aether Dragon Progenitor, containing the essence of wind.",
   "item.kubejs.astral_dragon_heart": "Astral Dragon Heart",
-  "item.kubejs.astral_dragon_heart.tooltip": "Remnant of the Astral Dragon Progenitor, containing the essence of stars",
+  "item.kubejs.astral_dragon_heart.tooltip": "§6■ Remnant of the Astral Dragon Progenitor, containing the essence of stars.",
 
   "item.kubejs.slime_crown": "Slime Crown",
   "item.kubejs.slime_crown.tooltip": "Can only be used in the Undergarden",
