--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -9,6 +9,8 @@
   "dragon_ability.dragonsurvival.wind_breath.desc": "■ 以太龙吞云吐雾，呼出轻柔的微风。\n\n■ 微风可§2清除杂草§7，亦可为友方§2加速§7。§r\n\n■ 吐息的§2伤害较低§7，但是§2不消耗魔力§7。§r",
   "dragon_stage.dragonsurvival.aether_ancient_human": "化形",
   "dragon_stage.dragonsurvival.aether_ancient": "远古龙",
+  "dragon_stage.dragonsurvival.aether_archean": "太古龙",
+  "dragon_stage.dragonsurvival.aether_progenitor": "始祖龙",
   "dragon_species.dragonsurvival.aether_dragon.banner.desc": "§7■ §6以太龙§r§7是§f迅捷§r§7、§f灵巧§r§7而优雅的生物，身躯可划破§f云海与波涛§r§7。\n\n§2■ 特性：§f§r§7高机动性、气象与气流魔法、水下呼吸增益、坠落免疫。\n§4■ 弱点：§r§7地底深处。\n§6■ 食谱：§f§r§7动物制品。§r",
   "dragon_species.dragonsurvival.aether_dragon_human": "青龙",
   "dragon_species.dragonsurvival.aether_dragon_human.banner.desc": "§7■ §6青龙§r§7是以太龙化形后的人身§r§7。\n\n§2■ 特性：§f§r§7高机动性、气象与气流魔法、水下呼吸增益、坠落免疫。\n§4■ 弱点：§r§7地底深处。\n§6■ 食谱：§f§r§7动物制品。§r",
@@ -35,17 +37,17 @@
   "item.kubejs.tundra_full_icon": "苔原龙完整图标",
 
   "item.kubejs.cave_dragon_heart": "洞穴龙心",
-  "item.kubejs.cave_dragon_heart.tooltip": "洞穴龙始祖的残存，蕴含着火之本源",
+  "item.kubejs.cave_dragon_heart.tooltip": "§6■ 洞穴龙始祖的残存，蕴含着火之本源。",
   "item.kubejs.forest_dragon_heart": "森林龙心",
-  "item.kubejs.forest_dragon_heart.tooltip": "森林龙始祖的残存，蕴含着木之本源",
+  "item.kubejs.forest_dragon_heart.tooltip": "§6■ 森林龙始祖的残存，蕴含着木之本源。",
   "item.kubejs.sea_dragon_heart": "海洋龙心",
-  "item.kubejs.sea_dragon_heart.tooltip": "海洋龙始祖的残存，蕴含着水之本源",
+  "item.kubejs.sea_dragon_heart.tooltip": "§6■ 海洋龙始祖的残存，蕴含着水之本源。",
   "item.kubejs.tundra_dragon_heart": "苔原龙心",
-  "item.kubejs.tundra_dragon_heart.tooltip": "苔原龙始祖的残存，蕴含着冰之本源",
+  "item.kubejs.tundra_dragon_heart.tooltip": "§6■ 苔原龙始祖的残存，蕴含着冰之本源。",
   "item.kubejs.aether_dragon_heart": "以太龙心",
-  "item.kubejs.aether_dragon_heart.tooltip": "以太龙始祖的残存，蕴含着风之本源",
+  "item.kubejs.aether_dragon_heart.tooltip": "§6■ 以太龙始祖的残存，蕴含着风之本源。",
   "item.kubejs.astral_dragon_heart": "星界龙心",
-  "item.kubejs.astral_dragon_heart.tooltip": "星界龙始祖的残存，蕴含着星之本源",
+  "item.kubejs.astral_dragon_heart.tooltip": "§6■ 星界龙始祖的残存，蕴含着星之本源。",
 
   "item.kubejs.slime_crown": "史莱姆皇冠",
   "item.kubejs.slime_crown.tooltip": "只能在深暗之园的特定结构处召唤史莱姆王",
