新增变大变小技能

--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -3,8 +3,10 @@
   "dragonsurvival.advancement.aether/be_dragon.desc": "成为一条以太龙。",
   "dragonsurvival.advancement.aether/be_old_dragon": "天庭之主",
   "dragonsurvival.advancement.aether/be_old_dragon.desc": "身为以太龙成长至60成长等级。",
-  "dragon_ability.dragonsurvival.behuman": "化形",
-  "dragon_ability.dragonsurvival.behuman.desc": "■ 以太龙修炼到远古阶段，可以化作人形。\n\n■ 人形态仍然保留龙族的能力，但没有物品限制。§r",
+  "dragon_ability.dragonsurvival.become_bigger": "变大",
+  "dragon_ability.dragonsurvival.become_bigger.desc": "■ 升级此技能可§2放大§r§7你的体型。\n\n■ 同时§2增加§r§7实体和方块交互距离。§r",
+  "dragon_ability.dragonsurvival.become_smaller": "变小",
+  "dragon_ability.dragonsurvival.become_smaller.desc": "■ 升级此技能可§2缩小§r§7你的体型。\n\n■ 同时§2减少§r§7实体和方块交互距离。§r",
   "dragon_ability.dragonsurvival.wind_breath": "微风之息",
   "dragon_ability.dragonsurvival.wind_breath.desc": "■ 以太龙吞云吐雾，呼出轻柔的微风。\n\n■ 微风可§2清除杂草§7，亦可为友方§2加速§7。§r\n\n■ 吐息的§2伤害较低§7，但是§2不消耗魔力§7。§r",
   "dragon_stage.dragonsurvival.aether_ancient_human": "化形",
