补全英语翻译

--- a/kubejs/assets/kubejs/lang/en_us.json
+++ b/kubejs/assets/kubejs/lang/en_us.json
@@ -5,6 +5,10 @@
   "dragonsurvival.advancement.aether/be_old_dragon.desc": "Gain level 60 growth as a aether dragon.",
 	"dragon_ability.dragonsurvival.behuman": "Human",
 	"dragon_ability.dragonsurvival.behuman.desc": "■ When the Aether Dragon reaches the Ancient stage, it can transform into a human form.\n\n■ §cNote: The current version has model issues, third-person view is recommended!§r",
+  "dragon_ability.dragonsurvival.become_bigger": "Become Bigger",
+  "dragon_ability.dragonsurvival.become_bigger.desc": "■ Upgrading this ability §2enlarges§r§7 your size.\n\n■ Also §2increases§r§7 entity and block interaction range.§r",
+  "dragon_ability.dragonsurvival.become_smaller": "Become Smaller",
+  "dragon_ability.dragonsurvival.become_smaller.desc": "■ Upgrading this ability §2shrinks§r§7 your size.\n\n■ Also §2decreases§r§7 entity and block interaction range.§r",
 	"dragon_ability.dragonsurvival.wind_breath": "Wind Breath",
 	"dragon_ability.dragonsurvival.wind_breath.desc": "■ The Aether Dragon exhales a gentle breeze, as if breathing clouds and mist.\n\n■ The wind can §2clear weeds§7 and also §2grant speed§7 to allies.§r\n\n■ Its §2damage is low§7, but it §2does not consume mana§7.§r",
 	"dragon_stage.dragonsurvival.aether_ancient_human": "Human",
